# Home_work

./: .coverage  .env.example  .gitingnore  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: decorators.py  external_api.py  generators.py  interfaces.py  main.py  masks.py  processing.py  reading_csv_excel.py  utils.py  widget.py
tests/: .coverage  conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_interfaces.py  test_masks.py  test_processing.py  test_reading_csv_excel.py  test_utils.py  test_widget.py
